# modsen_weather_test

./: .gitignore
Test_Task_Weather/: AppDelegate.swift  BridgeWrapper.h  BridgeWrapper.mm  Info.plist  SceneDelegate.swift  Test_Task_Weather-Bridging-Header.h  ViewController.swift
Test_Task_Weather.xcodeproj/: project.pbxproj
Test_Task_Weather.xcodeproj/project.xcworkspace/xcuserdata/developer.xcuserdatad/: UserInterfaceState.xcuserstate
Test_Task_Weather.xcodeproj/xcshareddata/xcschemes/: Test_Task_Weather.xcscheme
Test_Task_Weather.xcodeproj/xcuserdata/developer.xcuserdatad/xcschemes/: xcschememanagement.plist
Test_Task_Weather/Coordinator/: AppCoordinator.swift  Coordinator.swift
Test_Task_Weather/Models/: City.swift  WeatherItemModels.swift  WeatherServiceError.swift
Test_Task_Weather/Screens/CityList/: CityListViewController.swift  CityListViewModel.swift
Test_Task_Weather/Screens/WeatherDetail/: WeatherDetailViewController.swift  WeatherDetailViewModel.swift
Test_Task_Weather/Screens/WeatherDetail/Cells/: ForecastCollectionViewCell.swift
Test_Task_Weather/WeatherService/: WeatherService.swift
Test_Task_WeatherTests/: Test_Task_WeatherTests.swift
Test_Task_WeatherUITests/: Test_Task_WeatherUITests.swift  Test_Task_WeatherUITestsLaunchTests.swift
cpp_bridge/: CMakeLists.txt
cpp_bridge/include/: bridge.h
cpp_bridge/src/: bridge.cpp
